/*
 * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo MultiLabel core types.
 */
package tribuo.multilabel;

option java_multiple_files = true;
option java_package = "org.tribuo.multilabel.protos";

// Import Tribuo's core protos
import "tribuo-core.proto";

/*
MultiLabel proto
 */
message MultiLabelProto {
  repeated string label = 1;
  repeated double lblScore = 2;
  double overallScore = 3;
}

/*
MutableMultiLabelInfoProto
 */
message MutableMultiLabelInfoProto {
  repeated string label = 1;
  repeated int64 count = 2;
  int32 unknownCount = 3;
  int32 totalCount = 4;
}

/*
ImmutableMultiLabelInfoProto
 */
message ImmutableMultiLabelInfoProto {
  repeated string label = 1;
  repeated int64 count = 2;
  repeated int32 id = 3;
  int32 unknownCount = 4;
  int32 totalCount = 5;
}

/*
BinaryExample proto
 */
message BinaryExampleProto {
  tribuo.core.ExampleProto inner_example = 1;
  tribuo.core.OutputProto label = 2;
  float weight = 3;
  repeated string feature_name = 4;
  repeated double feature_value = 5;
}

/*
IndependentMultiLabelModel proto
 */
message IndependentMultiLabelModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  repeated tribuo.core.ModelProto models = 2;
  repeated tribuo.core.OutputProto labels = 3;
}

/**
ClassifierChainModel proto
 */
message ClassifierChainModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  repeated tribuo.core.ModelProto models = 2;
  repeated tribuo.core.OutputProto label_order = 3;
}
